--- a/src/main/resources/my.properties
+++ b/src/main/resources/my.properties
@@ -3,4 +3,4 @@
 password=1234
 driver=org.postgresql.Driver
 user=postgres
-url=jdbc\:postgresql\://localhost\:5432/postgres
+url=jdbc:postgresql://localhost:5432/postgres
